# asdl

./: .gitignore  .readthedocs.yaml  README.md  loss_func_issue.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py  train_with_kfac.sh
.github/workflows/: workflow.yml  workflow.yml.disable
asdfghjkl/: __init__.py  core.py  counter.py  fisher.py  fr.py  grad_maker.py  gradient.py  hessian.py  interval.py  kernel.py  matrices.py  mvp.py  precondition.py  symmatrix.py  utils.py  vector.py
asdfghjkl/operations/: __init__.py  batchnorm.py  bias.py  conv.py  conv_aug.py  embedding.py  embeddings.py  (+4 more)
asdl/: __init__.py  core.py  fisher.py  grad_maker.py  gradient.py  hessian.py  kernel.py  matrices.py  mvp.py  symmatrix.py  utils.py  vector.py
docs/: README.md  conf.py  index.rst  precondition.rst
examples/: eigen.py  eigenvalues.py  esd.py  grad_maker_demo1.py  grad_maker_demo2.py  line_search_train.py  one_shot_pruning.py  pseudo_batch_train.py  train.py  train_cpu.py  train_resnet50_with_kfac.py  train_vitb16_with_kfac.py
models/: SPT.py  cait.py  cnn.py  create_model.py  pit.py  resnet_nobn.py  swin.py  t2t.py  vit.py
test/: conftest.py
tests/: conftest.py  test_conjugate.py  test_emirical_ngd.py  test_empirical_ngd.py  test_fisher.py  test_fisher_dataloader.py  test_ifvp.py  test_mvp.py  test_non_hook_precondition.py  test_param_grad_w_fisher_emp.py  test_precondition_accumulate.py  test_pseudo_batch_loader_generator.py  test_pseudo_batch_precondition.py  test_shape_selection_in_ngd.py  test_unit_wise.py
utils/: drop_path.py  loss.py  mix.py
(+153 files in other folders)
