[metadata]
name = asdl
version = 0.1
author = Kazuki Osawa
author_email = osawa1021@gmail.com
description = ASDL: Automatic Second-order Differentiation (for Fisher, Gradient covariance, Hessian, Jacobian, and Kernel) Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kazukiosawa/asdl
project_urls =
    Bug Tracker = https://github.com/kazukiosawa/asdl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch >= 1.13.0